# Connector

./: .env.consumer.example  .env.email.live.example  .env.example  .env.live.example  .gitignore  PLANS.md  README.md  alembic.ini  pyproject.toml
design/: connector-dashboard-spec.md  connector-web-design-spec.md
docs/: api-and-swagger-guide.md
docs/architecture/: provider-modules.md
docs/configuration/: environment-setup.md
migrations/: env.py
migrations/versions/: 0001_control_plane.py  0001_initial_schema.py  0002_provider_connections.py  3d52dbf38a57_dashboard_sessions_and_query_governance.py  7a3c8f12e9b4_email_connectors_and_send_governance.py
research/: 20260717_CONNECTOR_MARKET_ASSESSMENT.md  20260717_OUTLOOK_GMAIL_CONNECTORS.md
src/connector_service/: __init__.py  app.py  config.py  email_governance.py  main.py  mcp_server.py  observability.py  query_governance.py
src/connector_service/api/: __init__.py  actions.py  admin.py  agent.py  connections.py  dashboard.py  dependencies.py  email_agent.py  email_connections.py  health.py  productivity.py  providers.py  schemas.py
src/connector_service/bootstrap/: __init__.py  app.py  config.py  dependencies.py
src/connector_service/catalog/: __init__.py  api.py  models.py  service.py
src/connector_service/connections/: __init__.py  api.py  oauth.py  repository.py  schemas.py  service.py
src/connector_service/connectors/: __init__.py  oauth.py
src/connector_service/connectors/email/: __init__.py  base.py  gmail.py  outlook.py  schemas.py
src/connector_service/connectors/productivity/: __init__.py  base.py  schemas.py
src/connector_service/connectors/supabase/: __init__.py  catalog.py  client.py  connection_schemas.py  connector.py
src/connector_service/core/: contracts.py  exceptions.py  pagination.py  registry.py  security.py
src/connector_service/db/: models.py  repositories.py  session.py
src/connector_service/identity/: __init__.py  api.py  authenticators.py  principal.py
src/connector_service/infrastructure/: crypto.py
src/connector_service/infrastructure/database/: __init__.py  models.py  session.py
src/connector_service/mcp/: api.py  server.py
src/connector_service/providers/: __init__.py  catalog.py  factory.py
src/connector_service/providers/gmail/: __init__.py  client.py  (+1 more)
src/connector_service/tools/: __init__.py  dashboard_login.py  live_supabase.py
src/connector_service/web_dist/: index.html
tests/: conftest.py  test_actions_api.py  test_admin_api.py  test_api_surface.py  test_dashboard_agent.py  test_email_clients.py  test_email_connectors.py  test_jwt_auth.py  test_live_supabase_config.py  test_mcp_server.py  test_persistence.py  test_productivity_connectors.py  test_provider_modules.py  test_security.py  test_supabase_client.py  test_supabase_connections.py  test_supabase_flow.py
tests/live/: test_email_providers_live.py  test_supabase_management_live.py  test_supabase_provider_live.py
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
web/src/: App.test.tsx  App.tsx  LandingPage.test.tsx  main.tsx  styles.css
web/src/api/: client.ts  types.ts
web/src/components/: AppShell.tsx  BrandLockup.tsx
web/src/landing/: LandingPage.tsx  ProviderLogo.tsx  TypewriterHeadline.tsx  landing.css
(+21 files in other folders)
