[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "connector-service"
version = "0.2.0"
description = "A focused OAuth and tool service for applications, people, and AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Connector Service Team" }]
dependencies = [
  "alembic==1.17.2",
  "cryptography==45.0.5",
  "fastapi==0.121.2",
  "httpx==0.28.1",
  "mcp==1.28.1",
  "psycopg[binary]==3.3.4",
  "pydantic==2.12.4",
  "pydantic-settings==2.12.0",
  "PyJWT[crypto]==2.13.0",
  "python-dotenv==1.1.1",
  "sqlalchemy==2.0.42",
  "uvicorn==0.38.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.22.1",
  "pytest==9.0.1",
  "pytest-cov==7.0.0",
  "ruff==0.15.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/connector_service"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings -p no:cacheprovider --cov=connector_service --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["connector_service"]
omit = [
  "src/connector_service/main.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]
"tests/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
